# prata

./: .gitignore  Cargo.toml  commit-notation.md
besked/: Cargo.toml
besked/src/: errors.rs  lib.rs  message.rs  nickname.rs
src/: call.rs  client.rs  invoke.rs  main.rs  netspaces.rs  protocol.rs  server.rs  spaces.rs  util.rs
src/proto/: client.rs  messages.rs  mod.rs  server.rs  spaces.rs
src/proto/stream/: header.rs  impls.rs  mod.rs
src/protocol/: client.rs  messages.rs  mod.rs  server.rs  spaces.rs
src/test/: mod.rs
