###############################################################################################################################################################################################################################################################
[package]
	authors      = ['OST-Gh']
	categories   = ['command-line-utilities']
	description  = 'A bespoke T.C.P./I.P.(v.4) chat application that runs from the C.L.I.'
	edition      = '2021'
	keywords     = []
	license-file = 'LICENSE'
	name         = 'prata'
	readme       = 'README.md'
	version      = '0.0.0'
###############################################################################################################################################################################################################################################################
[[bin]]
	name = 'prata'
	path = 'src/main.rs'
###############################################################################################################################################################################################################################################################
[dependencies]
	chrono           = '0'
	lazy-regex       = '3'
	local-ip-address = '0'
	thiserror        = '1'
