###############################################################################################################################
[package]
	authors.workspace      = true
	categories.workspace   = true
	description.workspace  = true
	edition.workspace      = true
	keywords.workspace     = true
	license-file.workspace = true
	name                   = 'besked'
	readme.workspace       = true
	version.workspace      = true
###############################################################################################################################
[dependencies]
	chrono      = '0'
	parking_lot = '0'
	thiserror   = '1'
